--- a/PoissonSolver/PoissonSolver.vcxproj.filters
+++ b/PoissonSolver/PoissonSolver.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClInclude Include="CreateBuffers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SharedConst.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="JacobiCS.hlsl">
