--- a/PoissonSolver/PoissonSolver.vcxproj
+++ b/PoissonSolver/PoissonSolver.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{D7D2A4AE-092A-46FC-A30E-8B90589946C9}</ProjectGuid>
     <RootNamespace>PoissonSolver</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -137,6 +137,7 @@ COPY /Y "$(OutDir)*.exe" "$(ProjectDir)..\Bin\"</Command>
     <ClCompile Include="ConjGrad.cpp" />
     <ClCompile Include="CreateBuffers.cpp" />
     <ClCompile Include="Jacobi.cpp" />
+    <ClCompile Include="Multigrid.cpp" />
     <ClCompile Include="PoissonSolver.cpp" />
     <ClCompile Include="PrefixSum.cpp" />
   </ItemGroup>
@@ -144,6 +145,7 @@ COPY /Y "$(OutDir)*.exe" "$(ProjectDir)..\Bin\"</Command>
     <ClInclude Include="ConjGrad.h" />
     <ClInclude Include="CreateBuffers.h" />
     <ClInclude Include="Jacobi.h" />
+    <ClInclude Include="Multigrid.h" />
     <ClInclude Include="PrefixSum.h" />
     <ClInclude Include="SharedConst.h" />
   </ItemGroup>
