--- a/PoissonSolver/PoissonSolver.vcxproj.filters
+++ b/PoissonSolver/PoissonSolver.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="PrefixSum.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Multigrid.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Jacobi.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PrefixSum.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Multigrid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
